2006-07-28 Wade Berrier <wberrier@novell.com> 

	* AddIn/Addin.cs: Update from refactoring change on IViewContent (svn r62840)

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* AddIn/VersionControl.addin.xml: Updated versions.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* AddIn/VersionControl.addin.xml: Updated versions.
	* AddIn/VersionControlAddIn.mdp: Updated.
	* VersionControl/VersionControl.mdp: Updated.
	* Diff/Diff.mdp: Updated.
	* VersionControl/VersionControl.mds: Updated.
	* DiffWidget/DiffWidget.mdp: Updated.

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* AddIn/Makefile.am:
	* AddIn/VersionControl.addin.xml: Updated references.

2006-03-26 Joshua Tauberer  <tauberer@for.net>

	* AddIn/Task.cs, Statuses.cs, Logs.cs: Prevent unhandled
	  exceptions if a library couldn't be found.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* VersionControl.mds:
	* DiffWidget/DiffWidget.mdp:
	* VersionControl/VersionControl.mdp:
	* Diff/Diff.mdp: Updated.
	* Makefile.am:
	* Diff/Makefile.am:
	* DiffWidget/Makefile.am:
	* VersionControl/Makefile.am: Use an unified format. 
	  Patch by Matze Braun.
	
	* VersionControl.addin.xml: Updated add-in versions.

2006-03-21  Wade Berrier <wberrier@novell.com> 

	* AddIn/Makefile.am: Fix 'make dist' to include missing png files

2006-03-02  Lluis Sanchez Gual  <lluis@novell.com> 

	* AddIn/Addin.cs: Track api changes.

2006-02-24  Lluis Sanchez Gual  <lluis@novell.com> 

	* VersionControl/AddIn/AddIn.mdp: Updated project references.

2005-12-04  Joshua Tauberer  <tauberer@for.net>

	* AddIn: Added icons to menus.  The icons again come
	  from the TortoiseSVN project (with a presumption of
	  license compatibility).

2005-11-18  Lluis Sanchez Gual  <lluis@novell.com> 

	* AddIn/VersionControl.addin.xml: Moved version control commands to
	its own submenu.

2005-11-15  Lluis Sanchez Gual  <lluis@novell.com> 

	* AddIn/Addin.cs: It should also work for Project, not only DotNetProject.