@@ -1,3 +1,7 @@
+2006-08-19 Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* AddIn/Addin.cs: Fix the build.
+
 2006-07-28 Wade Berrier <wberrier@novell.com> 
 
 	* AddIn/Addin.cs: Update from refactoring change on IViewContent (svn r62840)
